Fix filepage on mobile

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -131,6 +131,15 @@ body {
     @media (min-width: $breakpoint-medium) {
       flex-direction: row;
     }
+
+    .date_time {
+      font-size: var(--font-small);
+    }
+
+    .media__subtitle--centered::before {
+      content: '•';
+      margin-right: var(--spacing-m);
+    }
   }
 
   @keyframes fadeIn {
