--- a/ui/scss/component/_media.scss
+++ b/ui/scss/component/_media.scss
@@ -158,6 +158,7 @@
   .ratio-wrapper {
     position: relative;
     width: 100%;
+    margin-right: 0px;
 
     .ratio-bar {
       position: absolute;
@@ -178,6 +179,10 @@
         height: 1px;
         background-color: var(--color-slime);
       }
+    }
+
+    .button-dislike {
+      float: right;
     }
   }
 
